
  ZOOKEEPER-962. leader/follower coherence issue when follower is receiving a
  DIFF (Camille Fournier via breed)

  ZOOKEEPER-913. Version parser fails to parse "3.3.2-dev" from build.xml
  (Anthony Urso and phunt via phunt)

  ZOOKEEPER-985. Test BookieRecoveryTest fails on trunk. (fpj via breed)

  ZOOKEEPER-880. QuorumCnxManager$SendWorker grows without bounds (vishal via breed)

IMPROVEMENTS:
  ZOOKEEPER-963. Make Forrest work with JDK6 (Carl Steinbach via henryr)

  ZOOKEEPER-712. Bookie recovery (Erwin and flavio via mahadev)

  ZOOKEEPER-465. Ledger size in bytes. (Flavio via mahadev)

  ZOOKEEPER-960. Publish BookKeeper jars into maven. (mahadev via breed)

Release 3.3.2 - 2010-11-04
Backward compatible changes:

BUGFIXES:
  ZOOKEEPER-783. committedLog in ZKDatabase is not properly synchronized
  (henry via mahadev)

  ZOOKEEPER-790. Last processed zxid set prematurely while establishing 
  leadership (flavio via mahadev)

  ZOOKEEPER-772. zkpython segfaults when watcher from async get children 
  is invoked. (henry robinson via mahadev)

  ZOOKEEPER-795. eventThread isn't shutdown after a connection
  "session expired" event coming (sergey doroshenko via breed)

  ZOOKEEPER-792. zkpython memory leak (Lei Zhang via henryr)

  ZOOKEEPER-785. Zookeeper 3.3.1 shouldn't infinite loop if someone creates a
  server.0 line (phunt and Andrei Savu via breed)

  ZOOKEEPER-785. Zookeeper 3.3.1 shouldn't infinite loop if someone creates a
  server.0 line (part 2) (phunt)

  ZOOKEEPER-846. zookeeper client doesn't shut down cleanly on the close call
  (phunt)
  
  ZOOKEEPER-804. c unit tests failing due to "assertion cptr failed" (michi
  mutsuzaki via mahadev)

  ZOOKEEPER-844. handle auth failure in java client
  (Camille Fournier via phunt)

  ZOOKEEPER-822. Leader election taking a long time to complete
  (Vishal K via phunt)

  ZOOKEEPER-881. ZooKeeperServer.loadData loads database twice
  (Jared Cantwell via fpj)
