@@ -26,6 +26,8 @@ BUGFIXES:
   ZOOKEEPER-985. Test BookieRecoveryTest fails on trunk. (fpj via breed)
 
   ZOOKEEPER-880. QuorumCnxManager$SendWorker grows without bounds (vishal via breed)
+ 
+  ZOOKEEPER-1046. Creating a new sequential node results in a ZNODEEXISTS error. (Vishal K via camille) 
 
 IMPROVEMENTS:
   ZOOKEEPER-963. Make Forrest work with JDK6 (Carl Steinbach via henryr)
@@ -102,7 +104,7 @@ BUGFIXES:
   (jared cantwell via mahadev)
 
   ZOOKEEPER-907. Spurious "KeeperErrorCode = Session moved" messages (vishal k via breed)
-
+ 
 IMPROVEMENTS:
 
   ZOOKEEPER-789. Improve FLE log messages (flavio via phunt)
